[package]
name = "ilj-to-gc"
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool to fetch book datas from iLiswave-J and submit them to Google Calender"
repository = "https://github.com/zyoshoka/ilj-to-gc"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["rkyv-64", "serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
data-encoding = "2.5.0"
jsonwebtoken = "9.3.0"
regex = "1.10.0"
reqwest = { version = "0.12.3", features = ["cookies", "json"] }
scraper = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.8"
